@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.4.5">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.4.6">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -27,9 +27,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.4.5 [20230807]:
-- Improved Anime Tosho Scrapping
-- Escape special characters in Sphinx query
+Changelog 0.4.6 [20230808]:
+- Fix Sphinx clean function 
+- Fixed a small bug with Genres
     </news>
   </extension>
 </addon>
